Fixed row spilling off page, tweaked popover-left. Cleaned up card show page html a bit

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -10,11 +10,18 @@
     box-shadow: 1px 1px 8px rgba(0,0,0,1.0);
 }
 
+.row.no-right-margin {
+    margin-right: 0px;
+}
 //=========Popover============
 
-.popover.right {
+div.popover.right {
     border-radius: 4%;
     margin-left: 14%;
+}
+
+div.popover.left {
+    border-radius: 4%;
 }
 
 //removes border
@@ -35,4 +42,6 @@
     width: 223px;
 }
 
-//===========================
+//======================
+
+
